--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,18 @@
 buildscript {
     repositories {
+        mavenLocal()
         mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.android.tools.build:gradle:2.2.2'
     }
 }
 apply plugin: 'com.android.application'
 
 dependencies {
     repositories {
+        mavenLocal()
         mavenCentral()
     }
     compile fileTree(dir: 'libs', include: '*.jar')
